# BugSense-AI

./: .gitignore  README.md  STATUS.md  pyproject.toml  requirements.txt
backend/: main.py
dataset/: fetch_dataset.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: analyze_datasets.py  build_vector_index.py  evaluate_retrieval.py  try_retrieval.py
src/: bug_factory.py  bug_report.py  chunking.py  config.py  document_builder.py
src/embeddings/: text_embedder.py
src/indexing/: indexing_pipeline.py
src/ingestion/: dataset_loader.py  dataset_mapper.py
src/preprocessing/: log_extractor.py  preprocessor.py  text_cleaner.py
src/reranking/: reranker.py
src/retrieval/: bm25_index.py  retriever.py
src/serving/: retrieval_service.py
src/storage/: chroma_store.py
tests/: conftest.py  test_chunking.py  test_document_builder.py
tests/embeddings/: test_text_embedder.py
tests/indexing/: test_indexing_pipeline.py
tests/ingestion/: test_dataset_conversion.py  test_dataset_loader.py  test_dataset_mapper.py
tests/preprocessing/: test_log_extractor.py  test_text_cleaner.py
tests/retrieval/: test_bm25_index.py  test_retriever.py
tests/storage/: test_chroma_store.py
